Closed Bug 1920534 Opened 1 year ago Closed 1 year ago

Crash in [@ nsPIDOMWindowInner::GetOuterWindow] from CookieStore::GetInternal

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox130 --- unaffected
firefox131 --- unaffected
firefox132 --- fixed

People

(Reporter: mccr8, Assigned: baku)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/687cd703-3b3c-4bfa-a6f9-666650240921

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames:

0  libxul.so  nsCOMPtr<nsPIDOMWindowOuter>::get() const  xpcom/base/nsCOMPtr.h:751
0  libxul.so  nsCOMPtr<nsPIDOMWindowOuter>::operator nsPIDOMWindowOuter*() const&  xpcom/base/nsCOMPtr.h:759
0  libxul.so  nsPIDOMWindowInner::GetOuterWindow() const  dom/base/nsPIDOMWindow.h:118
0  libxul.so  mozilla::dom::(anonymous namespace)::GetContextAttributes(mozilla::dom::Cooki...  dom/cookiestore/CookieStore.cpp:212
1  libxul.so  mozilla::dom::CookieStore::GetInternal(mozilla::dom::CookieStoreGetOptions co...  dom/cookiestore/CookieStore.cpp:699
1  libxul.so  mozilla::detail::RunnableFunction<mozilla::dom::CookieStore::GetInternal(mozi...  xpcom/threads/nsThreadUtils.h:548
2  libxul.so  mozilla::RunnableTask::Run()  xpcom/threads/TaskController.cpp:618
2  libxul.so  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::det...  xpcom/threads/TaskController.cpp:945
3  libxul.so  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detai...  xpcom/threads/TaskController.cpp:768
3  libxul.so  mozilla::TaskController::ProcessPendingMTTask(bool)  xpcom/threads/TaskController.cpp:554

Null deref. Mostly show up on Android, but maybe there's another signature for desktop? It looks like some of this CookieStore code changed recently in bug 1475599, so I'm going to assume it is a regression from that.

Setting S2 because it is a regression with a reasonably high volume, for Android.

Severity: -- → S2

Looks like it is under the same signature on desktop, eg: bp-1cbe3298-4d7d-42e3-805d-e9d060240923

OS: Android → All

Another signature, with only a single crash: bp-1cbe3298-4d7d-42e3-805d-e9d060240923

Crash Signature: [@ nsPIDOMWindowInner::GetOuterWindow] → [@ nsPIDOMWindowInner::GetOuterWindow] [@ mozilla::dom::(anonymous namespace)::GetContextAttributes ]
Regressed by: 1475599

Set release status flags based on info from the regressing bug 1475599

:baku, since you are the author of the regressor, bug 1475599, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(amarchesini)
Assignee: nobody → amarchesini
Status: NEW → ASSIGNED
Flags: needinfo?(amarchesini)
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8787ad76f129 Extra check for the window object existence in CookieStore API, r=smaug
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: