Bug 1920534 - Extra check for the window object existence in CookieStore API, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D223328